@@ -1,2 +1,5 @@
+  08 Mar 2018; Manuel Friedli <manuel@fritteli.ch> -ganglia-web-3.7.2.ebuild:
+  sys-cluster/ganglia-web:  Purge old version of ganglia-web
+
   08 Mar 2018; Manuel Friedli <manuel@fritteli.ch> ganglia-web-3.7.3.ebuild:
   sys-cluster/ganglia-web:  Add ebuild for version 3.7.3
